# create_demo

./: .gitignore  frames_2026-02-22_10.42.25.gv
src/: README.md  target_positions
src/Universal_Robots_ROS2_Description/: .pre-commit-config.yaml  CMakeLists.txt  package.xml
src/Universal_Robots_ROS2_Description/config/ur10/: visual_parameters.yaml
src/Universal_Robots_ROS2_Description/config/ur12e/: visual_parameters.yaml
src/Universal_Robots_ROS2_Description/config/ur18/: visual_parameters.yaml
src/Universal_Robots_ROS2_Description/config/ur20/: visual_parameters.yaml
src/Universal_Robots_ROS2_Description/config/ur30/: visual_parameters.yaml
src/Universal_Robots_ROS2_Description/config/ur3e/: visual_parameters.yaml
src/Universal_Robots_ROS2_Description/config/ur5/: visual_parameters.yaml
src/Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
src/Universal_Robots_ROS2_Description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
src/apriltag_grid_detector/: package.xml  setup.cfg  setup.py
src/apriltag_grid_detector/apriltag_grid_detector/: apriltag_grid_detector.py
src/apriltag_grid_detector/launch/: apriltag_grid_detector.launch.py
src/calibration_targets/scripts/: create_bullseye.py
src/dual_arm_workcell_bringup/: CMakeLists.txt  package.xml
src/dual_arm_workcell_bringup/config/: world_to_left_base_link.txt  world_to_right_base_link.txt
src/dual_arm_workcell_bringup/launch/: dual_arm_workcell_bringup.launch.py  left_camera_left_wrist_3_link_calibration.launch.py  right_camera_right_wrist_3_link_calibration.launch.py
src/dual_arm_workcell_description/: CMakeLists.txt  package.xml
src/dual_arm_workcell_description/config/ur15/: visual_parameters.yaml
src/dual_arm_workcell_description/config/ur16e/: visual_parameters.yaml
src/dual_arm_workcell_description/config/ur3/: visual_parameters.yaml
src/dual_arm_workcell_description/config/ur7e/: visual_parameters.yaml
src/dual_arm_workcell_description/config/ur8long/: visual_parameters.yaml
src/dual_arm_workcell_description/launch/: view_urdf.launch.py  xacro_urdf.launch.py
src/dual_arm_workcell_description/rviz/: view_robot.rviz
src/dual_arm_workcell_description/scripts/: save_robot_description.py
src/dual_arm_workcell_description/urdf/: dual_arm_workcell.urdf  dual_arm_workcell.urdf.xacro
src/dual_arm_workcell_driver/: CMakeLists.txt  package.xml
src/dual_arm_workcell_driver/config/: combined_ur_controllers.yaml  left_ur16e_update_rate.yaml  left_ur_controllers.yaml  right_ur16e_update_rate.yaml  right_ur_controllers.yaml
src/dual_arm_workcell_driver/launch/: dual_arm_workcell_control.launch.py  dual_arm_workcell_control.launch.py.bak
src/dual_arm_workcell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_arm_workcell_moveit_config/config/: controllers.yaml  dual_arm_workcell.ros2_control.xacro  dual_arm_workcell.srdf  dual_arm_workcell.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  left_ur_servo.yaml  moveit.rviz  moveit_controllers.yaml  right_ur_servo.yaml
src/dual_arm_workcell_moveit_config/launch/: demo.launch.py  dual_arm_workcell_moveit.launch.py  dual_arm_workcell_moveit.launch.py.bak  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/motion_planning_abstractions/: CMakeLists.txt  package.xml
src/motion_planning_abstractions/config/: left_ur_servo.yaml  right_ur_servo.yaml  ur_servo.yaml
src/motion_planning_abstractions/include/motion_planning_abstractions/: pid_linear_velocity.hpp
src/motion_planning_abstractions/launch/: launch_servers.launch.py  launch_servers_single_ur.launch.py
src/motion_planning_abstractions/scripts/: delta_twist_cmds.py  sim_dt_error.py
src/motion_planning_abstractions/src/: pick_and_place_ft_feedback_server.cpp  pick_and_place_local_perception_server.cpp  pick_and_place_server.cpp  pid_angular_velocity.hpp  pid_linear_velocity.hpp  pose_tracker.cpp  predefined_state_server.cpp  state_machine.cpp
src/motion_planning_abstractions_msgs/: CMakeLists.txt  package.xml
src/motion_planning_abstractions_msgs/srv/: Pick.srv
src/open_set_object_detection/: package.xml  setup.cfg  setup.py
src/open_set_object_detection/scripts/: get_object_locations.py
src/open_set_object_detection_msgs/: CMakeLists.txt  package.xml
src/open_set_object_detection_msgs/msg/: ObjectPosition.msg  ObjectPositions.msg
src/open_set_object_detection_msgs/srv/: GetObjectLocations.srv
src/ur16e_handover/: CMakeLists.txt  package.xml
src/ur16e_handover/config/: waypoints.yaml
src/ur16e_handover/launch/: handover.launch.py  old_handover.launch.py
src/ur16e_handover/src/: handover.cpp  old_handover.cpp
