<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_arm_workcell_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vrv278@gmail.com">barracuda</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>dual_arm_workcell_driver</exec_depend>
  <exec_depend>dual_arm_workcell_moveit_config</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
