<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_arm_workcell_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vrv278@gmail.com">barracuda</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_client_library</exec_depend>
  <exec_depend>dual_arm_workcell_description</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
